# OpenGiuliaSLS

./: .gitignore  LICENSE  README.md  TESTS.md  annotation_check.txt  checkpoints.txt  config.example.yml  main.py  pyproject.toml
.claude/: settings.json
data/: output-info.csv
docs/: .gitignore  Dockerfile  README.md  architecture.md  channel-generation.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment-setup.md  index.md  models.md  requirements.txt  running-giulia.md
examples/: art.py  giulia_EV.py  giulia_EV_batch.py
giulia/: __init__.py  logger.py
plots/: _plotting_ground_grid_heatmap_kpi.py  plotting_EE_ue_association_singleStep.py  plotting_figures_npz2mat.py  plotting_scenario_stats.py  plotting_server_heatmaps.py  plotting_server_results.py  processing_fr3_article_results.py
scripts/: Comparison_GPUandCPU_BigModel_TensorFlow.py  Comparison_GPUandCPU_BigModel_Torch.py  build.sh  download_shadowing_files.py  installer.sh  installer_dependencies.sh  monitor_GPU.py  test_GPU_SimpleTrainNN_Tensorflow.py  test_GPU_SimpleTrainNN_Torch.py
shadowing/: G_shadowing_map_sigma_0_64_std_37.mat  G_shadowing_map_sigma_1_24_std_37.mat  G_shadowing_map_sigma_2_4_std_37.mat  G_shadowing_map_sigma_2_std_10.mat  G_shadowing_map_sigma_3_34_std_37.mat  G_shadowing_map_sigma_3_std_10.mat  G_shadowing_map_sigma_4_std_10.mat  G_shadowing_map_sigma_4_std_13.mat  G_shadowing_map_sigma_4_std_37.mat  G_shadowing_map_sigma_6_std_50.mat  G_shadowing_map_sigma_7_82_std_13.mat  G_shadowing_map_sigma_7_std_7.mat  G_shadowing_map_sigma_8_std_13.mat  (+5 more)
(+3815 files in other folders)
